welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: not found: value estSurMur
while(!estSurMur){
       ^Runner:4: error: not found: value estSurMur
while (estSurMur){
       ^Runner:10: error: not found: value estSurMur
while(!estSurMur){
       ^