welcome.lessons.welcome.loopfor.LoopStairs.scala.code
while(!estSurMur){
	avance()
}
while (estSurMur){
gauche()
avance()
droite()
avance()
}
while(!estSurMur){
	avance()
}
